--- a/.github/workflows/test_spark_3_1_java_8.yml
+++ b/.github/workflows/test_spark_3_1_java_8.yml
@@ -1,7 +1,7 @@
 name: Spark 3 / Java 8 / Scala 2.12
 on:
   push:
-    branches: [master]
+    branches: [master, test]
   pull_request:
     branches: [master]
 jobs:
