--- a/.github/workflows/test_spark_3_2_java_11.yml
+++ b/.github/workflows/test_spark_3_2_java_11.yml
@@ -1,7 +1,7 @@
 name: Spark 3.2 / Java 11 / Scala 2.13
 on:
   push:
-    branches: [master]
+    branches: [master, test]
   pull_request:
     branches: [master]
 jobs:
